# 1.8.0

* Moved the profile deletion function to a service.

# 1.7.0

* Add sms-verification functionality to verify users using a phone number and an activation code (that is sent to the phone number by the api).
* Add SMS password reset functionality to allow user to reset their password using a phone number and an activation code (that is sent to the phone number by the api).

# 1.6.3

* Add an argument to `editProfile()` to reference an object which is used to
update the view in the app

# 1.5.3

* Prevent forms being submitted whilst an existing request is in progress.

# 1.5.2

* Fix password change_form template.

# 1.5.1

* Updated the distribution files to fix the delete method.

# 1.5.0

* Added deletion function.

# 1.4.0

* Added form to resend verification email.

# 1.3.1

* Fixed typo in password reset request template.

# 1.3.0

* Marked password, registration and verification routes as anonymous only.

# 1.2.0

* Mark all strings as translatable using angular-gettext syntax.

# 1.1.0

* Added success and error data to scopes.
* Moved errors to a separate object, however they have been left on the fields
  for backwards compatibility.

# 1.0.1

* Ensure `$routeProvider` is defined.

# 1.0.0

* Rebranded as `angular-user-management` with closer ties to
[django-user-management](https://github.com/incuna/django-user-management)
* Complete refactor from https://github.com/incuna/angular-registration
* Split all functionality out in to independent modules, allowing for greater flexibility.