@@ -14,7 +14,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2",
-    "angular-route": "~1.2"
+    "angular": "~1.4",
+    "angular-route": "~1.4",
+    "angular-bootstrap": "1.1.0"
   }
 }
