@@ -1,1 +1,1 @@
-!function(a){"use strict";a.module("user_management.profile",["ngRoute"])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.provider("userManagementProfileConfig",function(){var a="",b="/profile";return{$get:function(){return{apiRoot:function(){return a},profileEndpoint:function(){return b}}},setApiRoot:function(b){a=b},setProfileEndpoint:function(a){b=a}}})}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.config(["$routeProvider",function(a){a.when("/profile/",{templateUrl:"templates/user_management/profile/profile.html",controller:"ProfileCtrl",anonymous:!1}).when("/delete-profile-confirmation/",{templateUrl:"templates/user_management/profile/delete-profile-confirmation.html",controller:"ProfileDeletedCtrl"})}])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.factory("profileFactory",["$http","userManagementProfileConfig",function(a,b){var c=b.apiRoot(),d={url:c+b.profileEndpoint(),options:function(){return a({method:"OPTIONS",url:d.url})},get:function(){return a({method:"GET",url:d.url})},deleteData:function(){return a({method:"DELETE",url:d.url})},patch:function(b){return a({method:"PATCH",url:d.url,data:b})}};return{profile:d}}]),b.factory("AccountFactory",["profileFactory","$modal","$location","$filter",function(a,b,c,d){var e={deleteAccount:function(){b.open({templateUrl:"templates/user_management/profile/delete-profile.html",windowClass:"delete-profile",controller:["$scope","$modalInstance",function(b,e){b.failed=!1,b.close=function(){e.dismiss("close")},b.deleteProfile=function(){a.profile.deleteData().then(function(){e.dismiss("close"),c.path(d("reverseUrl")("ProfileDeletedCtrl").substring(1))},function(){b.failed=!0})}}]})}};return{accountOperations:e}}])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.controller("ProfileCtrl",[function(){}]),b.controller("ProfileDeletedCtrl",[function(){}])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.directive("profileForm",["profileFactory",function(b){return{restrict:"A",scope:!0,templateUrl:"templates/user_management/profile/profile_form.html",link:function(c,d,e){c.data={},b.profile.get().then(function(b){a.extend(c.data,b.data)});var f=b.profile.options();f.then(function(a){c.fields=a.data.actions.PUT}),c.editProfile=function(d){c.loading||f.then(function(){c.loading=!0,c.updated=!1,c.successData=void 0,c.errorData=void 0,a.forEach(c.fields,function(a,b){a.errors=""}),c.errors={},b.profile.patch(c.data).then(function(b){c.data=b.data,a.isDefined(d)&&a.forEach(b.data,function(a,b){d[b]=a}),c.updated=!0,c.successData=b.data},function(b){c.errorData=b.data,a.forEach(b.data,function(b,d){b=a.isArray(b)?b[0]:b,a.isDefined(c.fields[d])&&(c.fields[d].errors=b),c.errors[d]=b})})["finally"](function(){c.loading=!1})})}}}}]),b.directive("profileDelete",["AccountFactory",function(a){return{restrict:"A",scope:!0,link:function(b){b.deleteProfile=function(){a.accountOperations.deleteAccount()}}}}])}(window.angular);
+!function(a){"use strict";a.module("user_management.profile",["ngRoute"])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.provider("userManagementProfileConfig",function(){var a="",b="/profile";return{$get:function(){return{apiRoot:function(){return a},profileEndpoint:function(){return b}}},setApiRoot:function(b){a=b},setProfileEndpoint:function(a){b=a}}})}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.config(["$routeProvider",function(a){a.when("/profile/",{templateUrl:"templates/user_management/profile/profile.html",controller:"ProfileCtrl",anonymous:!1}).when("/delete-profile-confirmation/",{templateUrl:"templates/user_management/profile/delete-profile-confirmation.html",controller:"ProfileDeletedCtrl"})}])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.factory("profileFactory",["$http","userManagementProfileConfig",function(a,b){var c=b.apiRoot(),d={url:c+b.profileEndpoint(),options:function(){return a({method:"OPTIONS",url:d.url})},get:function(){return a({method:"GET",url:d.url})},deleteData:function(){return a({method:"DELETE",url:d.url})},patch:function(b){return a({method:"PATCH",url:d.url,data:b})}};return{profile:d}}]),b.factory("AccountFactory",["profileFactory","$uibModal","$location","$filter",function(a,b,c,d){var e={deleteAccount:function(){b.open({templateUrl:"templates/user_management/profile/delete-profile.html",windowClass:"delete-profile",controller:["$scope","$uibModalInstance",function(b,e){b.failed=!1,b.close=function(){e.dismiss("close")},b.deleteProfile=function(){a.profile.deleteData().then(function(){e.dismiss("close"),c.path(d("reverseUrl")("ProfileDeletedCtrl").substring(1))},function(){b.failed=!0})}}]})}};return{accountOperations:e}}])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.controller("ProfileCtrl",[function(){}]),b.controller("ProfileDeletedCtrl",[function(){}])}(window.angular),function(a){"use strict";var b=a.module("user_management.profile");b.directive("profileForm",["profileFactory",function(b){return{restrict:"A",scope:!0,templateUrl:"templates/user_management/profile/profile_form.html",link:function(c,d,e){c.data={},b.profile.get().then(function(b){a.extend(c.data,b.data)});var f=b.profile.options();f.then(function(a){c.fields=a.data.actions.PUT}),c.editProfile=function(d){c.loading||f.then(function(){c.loading=!0,c.updated=!1,c.successData=void 0,c.errorData=void 0,a.forEach(c.fields,function(a,b){a.errors=""}),c.errors={},b.profile.patch(c.data).then(function(b){c.data=b.data,a.isDefined(d)&&a.forEach(b.data,function(a,b){d[b]=a}),c.updated=!0,c.successData=b.data},function(b){c.errorData=b.data,a.forEach(b.data,function(b,d){b=a.isArray(b)?b[0]:b,a.isDefined(c.fields[d])&&(c.fields[d].errors=b),c.errors[d]=b})})["finally"](function(){c.loading=!1})})}}}}]),b.directive("profileDelete",["AccountFactory",function(a){return{restrict:"A",scope:!0,link:function(b){b.deleteProfile=function(){a.accountOperations.deleteAccount()}}}}])}(window.angular);
