@@ -1,3 +1,9 @@
+# upcoming
+
+* BREAKING CHANGE
+    * Adding bootstap as a dependency.
+    * Also Updating Angular
+
 # 1.8.0
 
 * Moved the profile deletion function to a service.
